fix css spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,4 +8,8 @@ body {
 
 .main-container {
   margin-left: 15%;
+  display: flex;
+  justify-content: center;
+  border: black 1px solid;
+
 }
